<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--    android:id="@+id/action_settings"-->
<!--    android:orderInCategory="100"-->
<!--    android:title="@string/action_settings"-->
<!--    app:showAsAction="never" />-->


    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_morevert"
        android:title=""
        app:showAsAction="always">

    <menu>

        <item

            android:id="@+id/action_UploadTest"
            android:icon="@drawable/ic_test"
            android:title="@string/UploadTest"
            app:showAsAction="ifRoom"
            />
        <item

            android:id="@+id/action_RequestTest"
            android:icon="@drawable/ic_test"
            android:title="@string/RequestTest"
            app:showAsAction="ifRoom"
            />
    <item
        android:visible="false"
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_setting"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        />
        <item
            android:id="@+id/Token_menu"
            android:icon="@drawable/aboutus"
            android:title="Token"
            app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about_us"
        android:icon="@drawable/aboutus"
        android:title="@string/AboutUs"
        app:showAsAction="ifRoom" />
    </menu>
    </item>
</menu>