<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    tools:context=".Bookmarks.Bookmarks_Bottom">

    <TextView
        android:background="@drawable/bottom_backround"
        android:textColor="@color/grey_900"
        android:drawableTint="@color/grey_900"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/Bottom_FullPic"
        android:layout_marginTop="8dp"

        android:drawableLeft="@drawable/ic_preview"
        android:drawableStart="@drawable/ic_preview"
        android:text="@string/ViewFullPicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ActionItem"
        />
    <TextView
        android:background="@drawable/bottom_backround"
        android:textColor="@color/grey_900"
        android:drawableTint="@color/grey_900"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/Bottom_FullPic"
        android:id="@+id/Bottom_Share"
        android:drawableLeft="@drawable/ic_share"
        android:drawableStart="@drawable/ic_share"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ActionItem"
        />
    <TextView
        android:background="@drawable/bottom_backround"
        android:textColor="@color/grey_900"
        android:drawableTint="@color/grey_900"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/Bottom_RemoveBookmark"
        android:drawableLeft="@drawable/ic_delete"
        android:drawableStart="@drawable/ic_delete"
        android:text="@string/RemoveFromBookmarks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bottom_Share"
        style="@style/ActionItem"
        />
    <TextView
        android:textColor="@color/grey_900"
        android:drawableTint="@color/grey_900"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/Bottom_Copy"
        android:drawableLeft="@drawable/ic_copy"
        android:drawableStart="@drawable/ic_copy"
        android:text="@string/Copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bottom_RemoveBookmark"
        style="@style/ActionItem"
        />

    <TextView
        android:background="@drawable/bottom_backround"
        android:textColor="@color/grey_900"
        android:drawableTint="@color/grey_900"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/Bottom_Download"
        android:drawableLeft="@drawable/ic_download"
        android:drawableStart="@drawable/ic_download"
        android:text="@string/Download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bottom_Copy"
        style="@style/ActionItem"
        />

</androidx.constraintlayout.widget.ConstraintLayout>